trunk/Archive2/6f/b55e558cbd7abc/output
main.cpp:13:17: error: use of undeclared identifier 'std'
        case A: std::cout << "A" << std::endl; break;
                ^
main.cpp:13:37: error: use of undeclared identifier 'std'
        case A: std::cout << "A" << std::endl; break;
                                    ^
main.cpp:14:17: error: use of undeclared identifier 'std'
        case B: std::cout << "B" << std::endl; break;
                ^
main.cpp:14:37: error: use of undeclared identifier 'std'
        case B: std::cout << "B" << std::endl; break;
                                    ^
main.cpp:15:17: error: use of undeclared identifier 'std'
        case C: std::cout << "C" << std::endl; break;
                ^
main.cpp:15:37: error: use of undeclared identifier 'std'
        case C: std::cout << "C" << std::endl; break;
                                    ^
6 errors generated.
